working, got binding for remotely fetch items to work

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="fadi2">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Fadi Datalaya</title>
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
@@ -14,6 +14,7 @@
     <button id="find-url" class="btn">Find URL</button>
     <div id="preview-container"></div>
   </div>  
+  
 
   <div ng-view></div>
   
