--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <!--<li><a href="#/view1">view1</a></li>-->
-
+  
+  <!--
   <div class="row-fluid">
     <input type="text" id="inputer" value="enter url"/>
     <button id="find-url" class="btn">Find URL</button>
     <div id="preview-container"></div>
   </div>  
-  
+  -->
 
   <div ng-view></div>
   
@@ -28,16 +29,18 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 
-  <!--for link previewer-->
   <script type="text/javascript" src="lib/link-previewer/jquery-1.8.3.min.js"></script>
+    <!--for link previewer
   <script type="text/javascript" src="lib/link-previewer/bootstrap-linkpreview.js"></script>
   <script type="text/javascript" src="lib/link-previewer/proxy-ajax.js"></script>
   <script type="text/javascript">
-    $("#inputer").linkpreview({
+    var doc = $("#inputer").linkpreview({
         previewContainer: "#preview-container",
         refreshButton: "#find-url",
         previewContainerClass: "row-fluid"
     });
+   
   </script>
+-->
 </body>
 </html>
